--- a/.env
+++ b/.env
@@ -3,12 +3,12 @@ APP_DEBUG=true
 APP_KEY=base64:nL7Hw+OAWtyVAj/1FV0buw+jxz58WdrMOdU+uVSMSFA=
 APP_URL=http://localhost
 
-DB_CONNECTION=mysql
+DB_CONNECTION=polex
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=polex
 DB_USERNAME=root
-DB_PASSWORD=root
+DB_PASSWORD=localhost
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
